--- a/style.css
+++ b/style.css
@@ -18,11 +18,12 @@ header {
     font-family: 'Gilroy';
     font-weight: 500; 
     background: linear-gradient(114.23deg, #FEC501 0%, #80C242 67.71%); 
+    position: absolute;
+    z-index: 10;
 }
-
-.menu, footer{
-    padding: 0 50px 0px 100px;
-    position: relative; 
+.container {
+    display: block;
+    position: relative;  
 }
 
 .nav {
@@ -45,8 +46,8 @@ header {
     border-right: 1px solid #EAB602;
 }
 
-h1, span, h2 {   
-    padding: 50px 0; 
+h1, menu p, h2 {   
+    padding: 50px 50px 1px 150px; 
     margin: 0;
     text-transform: uppercase;
     font-size: 78px;  
@@ -57,47 +58,44 @@ h1, span, h2 {
 
 h2 {
     text-align: center;
-    padding: 50px 0 30px;
+    padding: 50px 0;
 }
-
-h1 span {
+h1 p {
     color: #443E3E;
-    z-index: 1;
-}
-
-.img_menu {
-    width: 40%;
-    bottom: 0;
-    right: 150px;
-    position: absolute;
-    
+    padding-top: 0;  
 }
 
 .menu_bg_img {
     position: absolute;
-    top: 30px;
-    left: 0; 
+    top: 0;
+    left: 10;
+    z-index: -1;
+}
+
+.img_menu {
+    position: absolute;
+    width: 45%;
+    bottom: 0px;
+    right: 150px; 
+    z-index: 2;  
 }
 
 .main {
-    max-width: 100%;
     background: linear-gradient(114.23deg, #FEC501 0%, #80C242 67.71%);
     position: relative;
 }
 
 .main_wrap {
-    padding-bottom: 20px;
+   
     display: flex;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: center;
-    height: 100%;
-    position: relative;
+    justify-content: center;  
 }
 
 .main_card {
-    padding: 25px 30px 25px 30px;
-    margin: 20px 145px;
+    padding: 20px 25px 20px 25px;
+    margin: 20px 100px;
     background: #FFFFFF;
     border: 2px solid #76C22E;
     box-shadow: -8px 8px 17px rgba(199, 165, 47, 0.5);
@@ -129,7 +127,7 @@ h1 span {
 
 .img_bg {
     position: absolute;
-    top: 7%;
+    top: 6%;
     right: 11%;
     
 }
@@ -149,6 +147,9 @@ h1 span {
 
 .contact_form {
     display: block;
+    position: absolute;
+    z-index: 1;
+    
 }
 
 input {
@@ -163,7 +164,7 @@ input {
     width: 465px;
     text-align: center;
     font-size: 20px;
-    z-index: 20;
+   
 }
 
 input[type=submit] {
@@ -175,7 +176,7 @@ input[type=submit] {
 }
 
 .contact_img {
-    position: relative;
+    
     margin-right: 150px;
     margin-top: 54px;
 }
@@ -184,6 +185,7 @@ input[type=submit] {
     position: absolute;
     bottom: 0;
     left: 90px;
+    z-index: 0;
 }
 
 footer {
@@ -191,21 +193,21 @@ footer {
 }
 
 .footer_wrap {
-    padding-top:  15px;
     display: flex;
     justify-content: center;
-    align-items:center; 
+    padding: 50px 0; 
 }
 
 .w-50 {
-    width:50%;
+    width:33.3%;
+    
 }
 
 .sm_links a {
+    margin-top: 20px;
     text-decoration: none;
     margin-right: 15px;
     font-size: 28px;
-    z-index: 10;
 }
 
 .logo_footer{
@@ -216,9 +218,13 @@ footer {
 .confed {
     text-decoration: none;
 }
+.confed:hover {
+    color: #443E3E;
+}
 
 .footer_img_bg {
     position: absolute;
     left: 90px;
-    bottom: 0;
+    top: 0;
+    z-index: 0;
 }
