--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
     border-right: 1px solid #EAB602;
 }
 
-h1, menu p, h2 {   
+h1, .menu_p, h2 {   
     padding: 50px 50px 1px 150px; 
     margin: 0;
     text-transform: uppercase;
@@ -60,9 +60,10 @@ h2 {
     text-align: center;
     padding: 50px 0;
 }
-h1 p {
+.menu_p {
     color: #443E3E;
     padding-top: 0;  
+    padding-bottom: 50px;
 }
 
 .menu_bg_img {
@@ -74,7 +75,7 @@ h1 p {
 
 .img_menu {
     position: absolute;
-    width: 45%;
+    width: 40%;
     bottom: 0px;
     right: 150px; 
     z-index: 2;  
@@ -197,8 +198,7 @@ footer {
 }
 
 .w-50 {
-    width:33.3%;
-    
+    width:33.3%;    
 }
 
 .sm_links a {
@@ -206,7 +206,6 @@ footer {
     text-decoration: none;
     margin-right: 15px;
     font-size: 28px;
-
 }
 
 .logo_footer{
@@ -226,4 +225,121 @@ footer {
     left: 90px;
     top: 0;
     z-index: 0;
+}
+
+@media (max-width: 736px) {
+
+
+    header {
+        position: relative;
+    }
+    .nav_item {
+        display: none;
+    }
+    .nav {
+        padding: 20px;
+    }
+    h1, .menu_p, h2 {
+        padding: 15px 20px ;
+        text-transform: uppercase;
+        font-size: 38px;  
+        line-height: 1;
+        text-align: center;
+    }
+    
+    .img_menu {
+        position: relative;
+        right: -20px;
+        width: 90%;
+    }
+    .main_card {
+        padding: 20px 25px 20px 25px;
+        margin: 10px 20px; 
+        width: 100%;
+        font-size: 16px;
+        text-align: center;
+    }
+    .main_img {
+        position: relative;
+        transform: translateX(55%);     
+        width: 80%;    
+    }
+    .contact_us {
+        padding-left: 20px;
+        flex-wrap: wrap;
+        position: relative;  
+    }
+    
+    .sub_title {
+        font-size: 16px;
+        line-height: 1;
+        padding-bottom: 0;
+        text-align: center;
+    }
+    
+    .contact_form {
+        display: flex;
+        flex-wrap: wrap;
+        position: relative;
+    }
+    
+    input {
+        padding: 15px 20px;
+        width: 80%;
+        text-align: center;
+        font-size: 14px;
+        margin: 10px;
+    }
+    
+    input[type=submit] {
+        width: 92%;
+    }
+    
+    .contact_img {
+        position: absolute;
+        top: 220px;
+        width: 100%;
+        transform: translateX(-6%);
+        z-index: 2;
+    }
+    
+    .contact_img_bg {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 0;
+    }
+
+    footer {
+        position: absolute;
+        padding-top: 420px;
+    }
+    .footer_wrap { 
+        display: block;
+        text-align: center;
+        padding: 20px; 
+    }
+    
+    .w-50 {
+        width:100%;  
+        font-size: 14px;  
+    }
+    
+    .sm_links a {
+        margin: 0;
+        padding: 0 10px;
+    }
+    
+    .logo_footer{
+        width: 100px;
+        margin-right: 0;
+    }
+    .footer_img_bg {
+        position: absolute;
+        left: 90px;
+        top: 0;
+        z-index: 0;
+    }
+
+
 }
